--- a/SchoolAPI/Properties/launchSettings.json
+++ b/SchoolAPI/Properties/launchSettings.json
@@ -29,7 +29,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "http://172.16.8.140:80"
+      "applicationUrl": "https://192.168.1.82:443"
     }
   }
 }
